fixed(Sidebar Menu): remove overlapping buttons

--- a/src/components/SidebarMenu/SidebarMenu.module.css
+++ b/src/components/SidebarMenu/SidebarMenu.module.css
@@ -48,7 +48,7 @@
 }
 
 .menuContainer {
-  margin-top: 30px;
+  margin-top: 50px;
   flex: 1;
   overflow-y: auto;
 }
@@ -66,3 +66,9 @@
 .closeBtn:hover {
   transform: scale(1.2);
 }
+
+
+
+
+
+
